--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
         "dev": "vite",
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "fix": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
+        "format": "prettier --write .",
         "preview": "vite preview"
     },
     "dependencies": {
