--- a/package.json
+++ b/package.json
@@ -9,7 +9,17 @@
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "fix": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
         "format": "prettier --write .",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "prepare": "husky install"
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx}": [
+            "eslint --quiet --fix",
+            "prettier --write --ignore-unknown"
+        ],
+        "*.{json,html}": [
+            "prettier --write --ignore-unknown"
+        ]
     },
     "dependencies": {
         "@hookform/resolvers": "^3.3.4",
@@ -46,6 +56,8 @@
         "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.6",
+        "husky": "^8.0.0",
+        "lint-staged": "^15.2.2",
         "postcss": "^8.4.38",
         "prettier": "3.2.5",
         "prettier-plugin-tailwindcss": "^0.5.13",
