--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "fix": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
         "format": "prettier --write .",
         "preview": "vite preview",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "test": "vitest run",
+        "test:watch": "vitest run"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx}": [
@@ -32,6 +34,7 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "date-fns": "^3.6.0",
+        "happy-dom": "^14.4.0",
         "lucide-react": "^0.363.0",
         "react": "^18.2.0",
         "react-day-picker": "^8.10.0",
@@ -44,6 +47,8 @@
         "zustand": "^4.5.2"
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^6.4.2",
+        "@testing-library/react": "^14.2.2",
         "@types/node": "^20.11.30",
         "@types/react": "^18.2.66",
         "@types/react-dom": "^18.2.22",
@@ -63,6 +68,7 @@
         "prettier-plugin-tailwindcss": "^0.5.13",
         "tailwindcss": "^3.4.1",
         "typescript": "^5.2.2",
-        "vite": "^5.2.0"
+        "vite": "^5.2.0",
+        "vitest": "^1.4.0"
     }
 }
