--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "preview": "vite preview",
         "prepare": "husky install",
         "test": "vitest run",
-        "test:watch": "vitest run"
+        "test:watch": "vitest"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx}": [
