--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,11 @@
         "lib": ["ES2020", "DOM", "DOM.Iterable"],
         "module": "ESNext",
         "skipLibCheck": true,
-        "types": ["@testing-library/jest-dom", "vitest/globals"],
+        "types": [
+            "@testing-library/jest-dom",
+            "vitest/globals",
+            "vitest/jsdom"
+        ],
 
         /* Bundler mode */
         "moduleResolution": "bundler",
