--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "react-router-dom": "^6.22.3",
         "tailwind-merge": "^2.2.2",
         "tailwindcss-animate": "^1.0.7",
+        "thirdweb": "^5.4.2",
         "zod": "^3.22.4",
         "zustand": "^4.5.2"
     },
