--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "date-fns": "^3.6.0",
+        "ethers": "^6.11.1",
         "happy-dom": "^14.4.0",
         "lucide-react": "^0.363.0",
         "react": "^18.2.0",
@@ -47,6 +48,7 @@
         "zustand": "^4.5.2"
     },
     "devDependencies": {
+        "@metamask/providers": "^16.0.0",
         "@testing-library/jest-dom": "^6.4.2",
         "@testing-library/react": "^14.2.2",
         "@testing-library/user-event": "^14.5.2",
